@@ -3,6 +3,8 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 2.3.0
 ============================
+ -- BLUEGENE - make sure we only set the jobinfo_select start_loc on a job
+    when we are on a small block, not a regular one.
 
 * Changes in SLURM 2.3.0.rc2
 ============================
